--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "id": "af3fed8d-9ebe-4a32-8c1f-51346ba5b0fa",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
       "Link Function:                     Log   Scale:                          1.0000\n",
       "Method:                           IRLS   Log-Likelihood:                -20.443\n",
       "Date:                 Tue, 30 Jul 2024   Deviance:                       20.481\n",
-      "Time:                         19:19:13   Pearson chi2:                     17.3\n",
+      "Time:                         19:32:35   Pearson chi2:                     17.3\n",
       "No. Iterations:                     22   Pseudo R-squ. (CS):             0.9983\n",
       "Covariance Type:             nonrobust                                         \n",
       "====================================================================================\n",
@@ -176,7 +176,7 @@
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -56.535\n",
       "Date:                Tue, 30 Jul 2024   Deviance:                       94.481\n",
-      "Time:                        19:19:13   Pearson chi2:                     86.0\n",
+      "Time:                        19:32:35   Pearson chi2:                     86.0\n",
       "No. Iterations:                    23   Pseudo R-squ. (CS):             0.9997\n",
       "Covariance Type:            nonrobust                                         \n",
       "====================================================================================\n",
@@ -232,7 +232,15 @@
     "# Fit the GLM model for MainLineAccidents using Poisson family\n",
     "model_main = sm.GLM(endog_main, exog, family=sm.families.Poisson()).fit()\n",
     "print(\"\\nMainLineAccidents Model Summary\")\n",
-    "print(model_main.summary())\n"
+    "print(model_main.summary())\n",
+    "# Convert the model summaries to DataFrames\n",
+    "summary_branch = model_branch.summary2().tables[1]\n",
+    "summary_main = model_main.summary2().tables[1]\n",
+    "\n",
+    "# Save the summaries to an Excel file\n",
+    "with pd.ExcelWriter('model_summaries.xlsx') as writer:\n",
+    "    summary_branch.to_excel(writer, sheet_name='BranchLineAccidents')\n",
+    "    summary_main.to_excel(writer, sheet_name='MainLineAccidents')"
    ]
   },
   {
