second version quetaa and peshawar done

--- a/revised/peshawar/peshawar.ipynb
+++ b/revised/peshawar/peshawar.ipynb
@@ -571,9 +571,74 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e5de42b5-bd63-470b-a26a-0191425f6724",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cc7d6d7a-1d11-4c4c-b0b2-ebe08af6a618",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Summary for Number of Casualties:\n",
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:           No_Casulties   No. Observations:                    6\n",
+      "Model:                            GLM   Df Residuals:                        4\n",
+      "Model Family:                 Poisson   Df Model:                            1\n",
+      "Link Function:                    Log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -9.0807\n",
+      "Date:                Wed, 31 Jul 2024   Deviance:                      0.20388\n",
+      "Time:                        19:51:02   Pearson chi2:                    0.200\n",
+      "No. Iterations:                     4   Pseudo R-squ. (CS):             0.2723\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===================================================================================\n",
+      "                      coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------\n",
+      "const               0.3582      0.656      0.546      0.585      -0.927       1.643\n",
+      "No_of_Accidents     0.1655      0.120      1.375      0.169      -0.070       0.401\n",
+      "===================================================================================\n",
+      "\n",
+      "Model Summary for Number of Deaths:\n",
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:           No_of_Deaths   No. Observations:                    6\n",
+      "Model:                            GLM   Df Residuals:                        4\n",
+      "Model Family:                 Poisson   Df Model:                            1\n",
+      "Link Function:                    Log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -7.1495\n",
+      "Date:                Wed, 31 Jul 2024   Deviance:                       2.0797\n",
+      "Time:                        19:51:02   Pearson chi2:                     1.59\n",
+      "No. Iterations:                     4   Pseudo R-squ. (CS):             0.3686\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===================================================================================\n",
+      "                      coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------\n",
+      "const              -1.0771      1.073     -1.004      0.316      -3.181       1.026\n",
+      "No_of_Accidents     0.2944      0.184      1.603      0.109      -0.065       0.654\n",
+      "===================================================================================\n",
+      "\n",
+      "Model Summary for Number of Injuries:\n",
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:         No_of_Injuries   No. Observations:                    6\n",
+      "Model:                            GLM   Df Residuals:                        4\n",
+      "Model Family:                 Poisson   Df Model:                            1\n",
+      "Link Function:                    Log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -34.363\n",
+      "Date:                Wed, 31 Jul 2024   Deviance:                       55.945\n",
+      "Time:                        19:51:02   Pearson chi2:                     65.0\n",
+      "No. Iterations:                     5   Pseudo R-squ. (CS):            0.09346\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===================================================================================\n",
+      "                      coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-----------------------------------------------------------------------------------\n",
+      "const               1.2700      0.489      2.596      0.009       0.311       2.229\n",
+      "No_of_Accidents     0.0733      0.095      0.770      0.442      -0.113       0.260\n",
+      "===================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import statsmodels.api as sm\n",
@@ -613,20 +678,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "ae3fac75-37bf-470a-9260-4ed3dc38786f",
+   "cell_type": "markdown",
+   "id": "09713b95-de01-41a4-a21f-65a12c9f1cfd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1514823128.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[37], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    Number of Casualties Model\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "## interpretation \n",
     "Number of Casualties Model\n",
