quetta and rawaplind word file created

--- a/revised/Quetta/Quetta.ipynb
+++ b/revised/Quetta/Quetta.ipynb
@@ -633,8 +633,7 @@
     "\n",
     "Summary\n",
     "\n",
-    "The analysis indicates significant negative relationships between the number of accidents, the number of damages to PR, and the causes of damage to PR with the cost of damage. Specifically, increases in these factors are associated with decreases in the cost of damage. These insights highlight the complex nature of the factors influencing the cost of damage in railway accidents and can inform targeted strategies to mitigate these costs effectively.==================area.\r\n",
-    "mber accidents."
+    "The analysis indicates significant negative relationships between the number of accidents, the number of damages to PR, and the causes of damage to PR with the cost of damage. Specifically, increases in these factors are associated with decreases in the cost of damage. These insights highlight the complex nature of the factors influencing the cost of damage in railway accidents and can inform targeted strategies to mitigate these costs effectively.."
    ]
   },
   {
