--- a/revised/peshawar/Peshawar new.ipynb
+++ b/revised/peshawar/Peshawar new.ipynb
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "a5fa26f0-eb55-4851-914e-9c7ec0aac0c0",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Season', 'No_of_Accidents'], dtype='object')\n",
+      "   Season  No_of_Accidents\n",
+      "0  Winter               13\n",
+      "1  Spring                4\n",
+      "2  Summer                8\n",
+      "3   Autam                2\n",
       "                 Generalized Linear Model Regression Results                  \n",
       "==============================================================================\n",
       "Dep. Variable:        No_of_Accidents   No. Observations:                    4\n",
@@ -985,8 +989,8 @@
       "Model Family:                 Poisson   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -7.1611\n",
-      "Date:                Fri, 02 Aug 2024   Deviance:                     0.088927\n",
-      "Time:                        18:56:44   Pearson chi2:                   0.0898\n",
+      "Date:                Sun, 04 Aug 2024   Deviance:                     0.088927\n",
+      "Time:                        00:23:34   Pearson chi2:                   0.0898\n",
       "No. Iterations:                     4   Pseudo R-squ. (CS):             0.9297\n",
       "Covariance Type:            nonrobust                                         \n",
       "===============================================================================\n",
@@ -1025,7 +1029,7 @@
     "df.columns = df.columns.str.replace(' ', '_')\n",
     "\n",
     "# Verify the updated column names\n",
-    "print(df.columns)  # Should now show the names with underscores\n",
+    "print(df)  # Should now show the names with underscores\n",
     "\n",
     "# Encode the categorical variable 'Season'\n",
     "df['Season'] = df['Season'].astype('category')\n",
@@ -1068,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f0cc8ee9-ebe1-45a6-a8aa-147dfdb039ce",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1080,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Season', 'No_of_Accidents'], dtype='object')\n",
+      "   Season  No_of_Accidents\n",
+      "0  Winter               13\n",
+      "1  Spring                4\n",
+      "2  Summer                8\n",
+      "3   Autam                2\n",
       "                 Generalized Linear Model Regression Results                  \n",
       "==============================================================================\n",
       "Dep. Variable:        No_of_Accidents   No. Observations:                    4\n",
@@ -1084,8 +1092,8 @@
       "Model Family:                 Poisson   Df Model:                            1\n",
       "Link Function:                    Log   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -7.3979\n",
-      "Date:                Fri, 02 Aug 2024   Deviance:                      0.56247\n",
-      "Time:                        18:58:47   Pearson chi2:                    0.552\n",
+      "Date:                Sun, 04 Aug 2024   Deviance:                      0.56247\n",
+      "Time:                        00:23:51   Pearson chi2:                    0.552\n",
       "No. Iterations:                     4   Pseudo R-squ. (CS):             0.9208\n",
       "Covariance Type:            nonrobust                                         \n",
       "===================================================================================\n",
@@ -1124,7 +1132,7 @@
     "df.columns = df.columns.str.replace(' ', '_')\n",
     "\n",
     "# Verify the updated column names\n",
-    "print(df.columns)  # Should now show the names with underscores\n",
+    "print(df)  # Should now show the names with underscores\n",
     "\n",
     "# Encode the categorical variable 'Season'\n",
     "# df['Season'] = df['Season'].astype('category')\n",
@@ -1167,8 +1175,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "da6ac149-2834-43d8-99a3-1a90363161e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Renamed 'accidents_by_line_and_section.png' to 'P_accidents_by_line_and_section.png'\n",
+      "Renamed 'accidents_by_season.png' to 'P_accidents_by_season.png'\n",
+      "Renamed 'accidents_by_train_type_over_years.png' to 'P_accidents_by_train_type_over_years.png'\n",
+      "Renamed 'actual_vs_predicted_accidents.png' to 'P_actual_vs_predicted_accidents.png'\n",
+      "Renamed 'actual_vs_predicted_accidents_by_line.png' to 'P_actual_vs_predicted_accidents_by_line.png'\n",
+      "Renamed 'combined_damage_analysis.png' to 'P_combined_damage_analysis.png'\n",
+      "Renamed 'contributions_to_accidents.png' to 'P_contributions_to_accidents.png'\n",
+      "Renamed 'contributions_to_accidents_location.png' to 'P_contributions_to_accidents_location.png'\n",
+      "Renamed 'cost_of_damage_analysis.png' to 'P_cost_of_damage_analysis.png'\n",
+      "Renamed 'severity_analysis.png' to 'P_severity_analysis.png'\n",
+      "Renamed 'severity_analysis_all.png' to 'P_severity_analysis_all.png'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "def add_prefix_to_png_files(prefix='P_'):\n",
+    "    # Get the current working directory\n",
+    "    folder_path = os.getcwd()\n",
+    "    \n",
+    "    # Iterate over each file in the folder\n",
+    "    for filename in os.listdir(folder_path):\n",
+    "        # Check if the file has a .png extension\n",
+    "        if filename.endswith('.png'):\n",
+    "            # Define the new filename with the prefix\n",
+    "            new_filename = prefix + filename\n",
+    "            # Get the full path of the old and new filenames\n",
+    "            old_file_path = os.path.join(folder_path, filename)\n",
+    "            new_file_path = os.path.join(folder_path, new_filename)\n",
+    "            # Rename the file\n",
+    "            os.rename(old_file_path, new_file_path)\n",
+    "            print(f\"Renamed '{filename}' to '{new_filename}'\")\n",
+    "\n",
+    "# Example usage:\n",
+    "add_prefix_to_png_files()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c9f8d87-ae5b-49dd-9c07-f2a72d3316f8",
    "metadata": {},
    "outputs": [],
    "source": []
