--- a/revised/Causes and annual.ipynb
+++ b/revised/Causes and annual.ipynb
@@ -320,8 +320,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9c550df2-c4ac-427b-898c-c7c4a66215b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:        No of Accidents   No. Observations:                    1\n",
+      "Model:                            GLM   Df Residuals:                        0\n",
+      "Model Family:                 Poisson   Df Model:                            0\n",
+      "Link Function:                    Log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -2.9057\n",
+      "Date:                Mon, 05 Aug 2024   Deviance:                   3.3307e-15\n",
+      "Time:                        15:11:00   Pearson chi2:                 1.15e-28\n",
+      "No. Iterations:                     1   Pseudo R-squ. (CS):         -5.684e-14\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=============================================================================================================================================\n",
+      "                                                                                coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------------------------------------------------------------------\n",
+      "Wear and Tear of Wheel                                                        0.1114      0.004     28.904      0.000       0.104       0.119\n",
+      "Fresh breakage of buffer rod of leading coach                                 0.0975      0.003     28.904      0.000       0.091       0.104\n",
+      "Failure of axle of wagon                                                      0.0418      0.001     28.904      0.000       0.039       0.045\n",
+      "Bolster spring of suspension broken                                           0.0697      0.002     28.904      0.000       0.065       0.074\n",
+      "Brake block of dead locomotive fallen down in points and broken the point     0.0279      0.001     28.904      0.000       0.026       0.030\n",
+      "Pivot pin of coach broken                                                     0.0139      0.000     28.904      0.000       0.013       0.015\n",
+      "Spring of shackle broken                                                      0.0279      0.001     28.904      0.000       0.026       0.030\n",
+      "Broken hanger bolt                                                            0.0139      0.000     28.904      0.000       0.013       0.015\n",
+      "Hot axle                                                                      0.0697      0.002     28.904      0.000       0.065       0.074\n",
+      "Fresh Breakage of axle box                                                    0.0697      0.002     28.904      0.000       0.065       0.074\n",
+      "Bent Axle                                                                     0.0418      0.001     28.904      0.000       0.039       0.045\n",
+      "Warm Box                                                                      0.0139      0.000     28.904      0.000       0.013       0.015\n",
+      "Low buffer height                                                             0.1114      0.004     28.904      0.000       0.104       0.119\n",
+      "Shifted Springs                                                               0.0279      0.001     28.904      0.000       0.026       0.030\n",
+      "=============================================================================================================================================\n",
+      "Model Coefficients:\n",
+      "Wear and Tear of Wheel                                                       0.111447\n",
+      "Fresh breakage of buffer rod of leading coach                                0.097516\n",
+      "Failure of axle of wagon                                                     0.041793\n",
+      "Bolster spring of suspension broken                                          0.069654\n",
+      "Brake block of dead locomotive fallen down in points and broken the point    0.027862\n",
+      "Pivot pin of coach broken                                                    0.013931\n",
+      "Spring of shackle broken                                                     0.027862\n",
+      "Broken hanger bolt                                                           0.013931\n",
+      "Hot axle                                                                     0.069654\n",
+      "Fresh Breakage of axle box                                                   0.069654\n",
+      "Bent Axle                                                                    0.041793\n",
+      "Warm Box                                                                     0.013931\n",
+      "Low buffer height                                                            0.111447\n",
+      "Shifted Springs                                                              0.027862\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define the data\n",
+    "data = {\n",
+    "    'Wear and Tear of Wheel': [8],\n",
+    "    'Fresh breakage of buffer rod of leading coach': [7],\n",
+    "    'Failure of axle of wagon': [3],\n",
+    "    'Bolster spring of suspension broken': [5],\n",
+    "    'Brake block of dead locomotive fallen down in points and broken the point': [2],\n",
+    "    'Pivot pin of coach broken': [1],\n",
+    "    'Spring of shackle broken': [2],\n",
+    "    'Broken hanger bolt': [1],\n",
+    "    'Hot axle': [5],\n",
+    "    'Fresh Breakage of axle box': [5],\n",
+    "    'Bent Axle': [3],\n",
+    "    'Warm Box': [1],\n",
+    "    'Low buffer height': [8],\n",
+    "    'Shifted Springs': [2],\n",
+    "    'No of Accidents': [53]\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Define the independent variables and the dependent variable\n",
+    "X = df.drop(columns='No of Accidents')\n",
+    "y = df['No of Accidents']\n",
+    "\n",
+    "# Add a constant to the model (intercept)\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Fit a Poisson GLM model\n",
+    "poisson_model = sm.GLM(y, X, family=sm.families.Poisson()).fit()\n",
+    "\n",
+    "# Print the summary of the model\n",
+    "print(poisson_model.summary())\n",
+    "\n",
+    "# Print the model parameters\n",
+    "print(\"Model Coefficients:\")\n",
+    "print(poisson_model.params)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2c802295-211e-40ec-8fa7-bd3e2a87defa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Generalized Linear Model Regression Results                  \n",
+      "==============================================================================\n",
+      "Dep. Variable:        No of Accidents   No. Observations:                    1\n",
+      "Model:                            GLM   Df Residuals:                        0\n",
+      "Model Family:                 Poisson   Df Model:                            0\n",
+      "Link Function:                    log   Scale:                          1.0000\n",
+      "Method:                          IRLS   Log-Likelihood:                -2.4210\n",
+      "Date:                Mon, 05 Aug 2024   Deviance:                   8.8818e-16\n",
+      "Time:                        15:05:46   Pearson chi2:                 2.52e-30\n",
+      "No. Iterations:                     1   Pseudo R-squ. (CS):              0.000\n",
+      "Covariance Type:            nonrobust                                         \n",
+      "====================================================================================================\n",
+      "                                       coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Point Gaping                         0.2024      0.015     13.397      0.000       0.173       0.232\n",
+      "Short Circuits                       0.0810      0.006     13.397      0.000       0.069       0.093\n",
+      "Power Supply Problems                0.0405      0.003     13.397      0.000       0.035       0.046\n",
+      "Mechanical Failures                  0.1214      0.009     13.397      0.000       0.104       0.139\n",
+      "Environmental Factors                0.1214      0.009     13.397      0.000       0.104       0.139\n",
+      "Human Error                          0.2024      0.015     13.397      0.000       0.173       0.232\n",
+      "Age and Infrastructure Condition     0.0405      0.003     13.397      0.000       0.035       0.046\n",
+      "====================================================================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Define the data\n",
+    "data = {\n",
+    "    'Point Gaping': [5],\n",
+    "    'Short Circuits': [2],\n",
+    "    'Power Supply Problems': [1],\n",
+    "    'Mechanical Failures': [3],\n",
+    "    'Environmental Factors': [3],\n",
+    "    'Human Error': [5],\n",
+    "    'Age and Infrastructure Condition': [1],\n",
+    "    'No of Accidents': [20]\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Define the dependent (response) and independent (predictor) variables\n",
+    "X = df[['Point Gaping', 'Short Circuits', 'Power Supply Problems', 'Mechanical Failures', \n",
+    "        'Environmental Factors', 'Human Error', 'Age and Infrastructure Condition']]\n",
+    "y = df['No of Accidents']\n",
+    "\n",
+    "# Add a constant to the model (intercept)\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Specify the GLM with a Poisson distribution and log link function\n",
+    "glm_poisson = sm.GLM(y, X, family=sm.families.Poisson(link=sm.families.links.log()))\n",
+    "glm_poisson_results = glm_poisson.fit()\n",
+    "\n",
+    "# Print the summary of the GLM\n",
+    "print(glm_poisson_results.summary())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "444f316c-6d22-4e0d-8047-f8738ce60208",
    "metadata": {},
    "outputs": [],
    "source": []
