6th revision model variables changed intial

--- a/revised/Causes and annual.ipynb
+++ b/revised/Causes and annual.ipynb
@@ -493,8 +493,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "444f316c-6d22-4e0d-8047-f8738ce60208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Define the data\n",
+    "data = {\n",
+    "    'Point Gaping': [5],\n",
+    "    'Short Circuits': [2],\n",
+    "    'Power Supply Problems': [1],\n",
+    "    'Mechanical Failures': [3],\n",
+    "    'Environmental Factors': [3],\n",
+    "    'Human Error': [5],\n",
+    "    'Age and Infrastructure Condition': [1],\n",
+    "    'No of Accidents': [20]\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Define the dependent (response) and independent (predictor) variables\n",
+    "X = df[['Point Gaping', 'Short Circuits', 'Power Supply Problems', 'Mechanical Failures', \n",
+    "        'Environmental Factors', 'Human Error', 'Age and Infrastructure Condition']]\n",
+    "y = df['No of Accidents']\n",
+    "\n",
+    "# Add a constant to the model (intercept)\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Specify the GLM with a Poisson distribution and log link function\n",
+    "glm_poisson = sm.GLM(y, X, family=sm.families.Poisson(link=sm.families.links.log()))\n",
+    "glm_poisson_results = glm_poisson.fit()\n",
+    "\n",
+    "# Print the summary of the GLM and save it to a file\n",
+    "with open('glm_mechanical_defects_summary.txt', 'a') as f:\n",
+    "    f.write(\"\\nGLM Summary for Mechanical Defects:\\n\")\n",
+    "    f.write(str(glm_poisson_results.summary()))\n",
+    "    f.write(\"\\n\\n\")  # Add extra newlines for separation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ae5234ee-34d9-48ac-94fa-5764c02b4c3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "# Define the data\n",
+    "data = {\n",
+    "    'Wear and Tear of Wheel': [8],\n",
+    "    'Fresh breakage of buffer rod of leading coach': [7],\n",
+    "    'Failure of axle of wagon': [3],\n",
+    "    'Bolster spring of suspension broken': [5],\n",
+    "    'Brake block of dead locomotive fallen down in points and broken the point': [2],\n",
+    "    'Pivot pin of coach broken': [1],\n",
+    "    'Spring of shackle broken': [2],\n",
+    "    'Broken hanger bolt': [1],\n",
+    "    'Hot axle': [5],\n",
+    "    'Fresh Breakage of axle box': [5],\n",
+    "    'Bent Axle': [3],\n",
+    "    'Warm Box': [1],\n",
+    "    'Low buffer height': [8],\n",
+    "    'Shifted Springs': [2],\n",
+    "    'No of Accidents': [53]\n",
+    "}\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Define the independent variables and the dependent variable\n",
+    "X = df.drop(columns='No of Accidents')\n",
+    "y = df['No of Accidents']\n",
+    "\n",
+    "# Add a constant to the model (intercept)\n",
+    "X = sm.add_constant(X)\n",
+    "\n",
+    "# Fit a Poisson GLM model\n",
+    "poisson_model = sm.GLM(y, X, family=sm.families.Poisson()).fit()\n",
+    "\n",
+    "# Save the summary and model parameters to a file\n",
+    "with open('glm_mechanical_defects_detailed_summary.txt', 'a') as f:\n",
+    "    f.write(\"\\nGLM Summary for Mechanical Defects Analysis:\\n\")\n",
+    "    f.write(str(poisson_model.summary()))\n",
+    "    f.write(\"\\nModel Coefficients:\\n\")\n",
+    "    f.write(str(poisson_model.params))\n",
+    "    f.write(\"\\n\\n\")  # Add extra newlines for separation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fa3af3b-3bd7-48aa-aeb4-b7ce7f02b327",
    "metadata": {},
    "outputs": [],
    "source": []
